--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     </head>
         <body>
             <div class="block">
-                <h1>Project Vtu Calculator</h1>This vtu calculator helps all student to calculate SGPA and CGPA</p>
-                <p> 
+                <h1>Project Vtu Calculator</h1>
+                <p>This vtu calculator helps all student to calculate SGPA and CGPA</p>     
             </div>
         </body>
     
