--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <body>
             <div class="block">
                 <h1>Project Vtu Calculator</h1>
-                <p>This vtu calculator helps all student to calculate SGPA and CGPA</p>     
+                <p>This vtu calculator helps all student to calculate SGPA and CGPA .........</p>     
             </div>
         </body>
     
